--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(model: episode) do |form| %>
+<%= form_with(model: episode, class: "contents") do |form| %>
   <% if episode.errors.any? %>
-    <div style="color: red">
+    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(episode.errors.count, "error") %> prohibited this episode from being saved:</h2>
 
       <ul>
@@ -11,42 +11,95 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+  <div class="my-5">
+    <%= form.label :title %>
+    <%= form.text_field :title, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div>
-    <%= form.label :audio, style: "display: block" %>
-    <%= form.file_field :audio, accept: "audio/*" %>
+  <div class="my-5">
+    <%= form.label :audio %>
+    <%= form.file_field :audio, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div>
-    <%= form.label :published_at, style: "display: block" %>
-    <%= form.datetime_field :published_at %>
+  <div class="my-5">
+    <%= form.label :published_at %>
+    <%= form.datetime_field :published_at, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+  <div class="my-5">
+    <%= form.label :description %>
+    <%= form.text_field :description, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div>
-    <%= form.label :show_notes, style: "display: block" %>
-    <%= form.rich_text_area :show_notes %>
+  <div class="my-5">
+    <%= form.label :explicit %>
+    <%= form.check_box :explicit, class: "block mt-2 h-5 w-5" %>
   </div>
 
-  <div>
-    <%= form.label :explicit, style: "display: block" %>
-    <%= form.check_box :explicit %>
+  <div class="my-5">
+    <%= form.label :duration %>
+    <%= form.number_field :duration, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div>
-    <%= form.label :duration, style: "display: block" %>
-    <%= form.number_field :duration %>
+  <div class="my-5">
+    <%= form.label :show_notes %>
+    <%= form.rich_text_area :show_notes, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="inline">
+    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
+
+<%# <%= form_with(model: episode) do |form| %1> %>
+<%#   <% if episode.errors.any? %1> %>
+<%#     <div style="color: red"> %>
+<%#       <h2><%= pluralize(episode.errors.count, "error") %1> prohibited this episode from being saved:</h2> %>
+
+<%#       <ul> %>
+<%#         <% episode.errors.each do |error| %1> %>
+<%#           <li><%= error.full_message %1></li> %>
+<%#         <% end %1> %>
+<%#       </ul> %>
+<%#     </div> %>
+<%#   <% end %1> %>
+
+<%#   <div> %>
+<%#     <%= form.label :title, style: "display: block" %1> %>
+<%#     <%= form.text_field :title %1> %>
+<%#   </div> %>
+
+<%#   <div> %>
+<%#     <%= form.label :audio, style: "display: block" %1> %>
+<%#     <%= form.file_field :audio, accept: "audio/*" %1> %>
+<%#   </div> %>
+
+<%#   <div> %>
+<%#     <%= form.label :published_at, style: "display: block" %1> %>
+<%#     <%= form.datetime_field :published_at %1> %>
+<%#   </div> %>
+
+<%#   <div> %>
+<%#     <%= form.label :description, style: "display: block" %1> %>
+<%#     <%= form.text_field :description %1> %>
+<%#   </div> %>
+
+<%#   <div> %>
+<%#     <%= form.label :show_notes, style: "display: block" %1> %>
+<%#     <%= form.rich_text_area :show_notes %1> %>
+<%#   </div> %>
+
+<%#   <div> %>
+<%#     <%= form.label :explicit, style: "display: block" %1> %>
+<%#     <%= form.check_box :explicit %1> %>
+<%#   </div> %>
+
+<%#   <div> %>
+<%#     <%= form.label :duration, style: "display: block" %1> %>
+<%#     <%= form.number_field :duration %1> %>
+<%#   </div> %>
+
+<%#   <div> %>
+<%#     <%= form.submit %1> %>
+<%#   </div> %>
+<%# <% end %1> %>
