--- a/app/views/episodes/edit.html.erb
+++ b/app/views/episodes/edit.html.erb
@@ -1,12 +1,10 @@
 <% content_for :title, "Editing episode" %>
 
-<h1>Editing episode</h1>
+<div class="mx-auto md:w-2/3 w-full">
+  <h1 class="font-bold text-4xl">Editing episode</h1>
 
-<%= render "form", episode: @episode %>
+  <%= render "form", episode: @episode %>
 
-<br>
-
-<div>
-  <%= link_to "Show this episode", @episode %> |
-  <%= link_to "Back to episodes", episodes_path %>
+  <%= link_to "Show this episode", @episode, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to episodes", episodes_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
