--- a/app/views/episodes/new.html.erb
+++ b/app/views/episodes/new.html.erb
@@ -1,11 +1,9 @@
 <% content_for :title, "New episode" %>
 
-<h1>New episode</h1>
+<div class="mx-auto md:w-2/3 w-full">
+  <h1 class="font-bold text-4xl">New episode</h1>
 
-<%= render "form", episode: @episode %>
+  <%= render "form", episode: @episode %>
 
-<br>
-
-<div>
-  <%= link_to "Back to episodes", episodes_path %>
+  <%= link_to "Back to episodes", episodes_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
