--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Key Pair Episodes</h1>
+    <h1 class="font-bold text-4xl">Key Pair Episodes!</h1>
     <%= link_to "New episode", new_episode_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
