won't publish episode to feed if it's not published yet.

--- a/app/views/episodes/_episode.html.erb
+++ b/app/views/episodes/_episode.html.erb
@@ -24,4 +24,9 @@
     <%= episode.explicit %>
   </p>
 
+  <p class="my-5">
+    <strong class="block font-medium mb-1">Show Notes:</strong>
+    <%= episode.show_notes %>
+  </p>
+
 </div>
